# CppND-Capstone-Project-FaceDetection

./: README.md
face-detector/: CMakeLists.txt
face-detector/src/: facedetector.cpp  facedetector.h  main.cpp
